; ModuleID = '/home/carl/AnghaBench/h2o/lib/handler/mruby/extr_middleware.c_build_response_method.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/handler/mruby/extr_middleware.c_build_response_method.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.st_mruby_subreq_t = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@app_request_type = common dso_local global i32 0, align 4
@E_ARGUMENT_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [37 x i8] c"AppRequest#build_response wrong self\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @build_response_method to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @build_response_method(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.st_mruby_subreq_t*, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i32*, i32** %3, align 8
  %8 = load i32, i32* %4, align 4
  %9 = call %struct.st_mruby_subreq_t* @mrb_data_check_get_ptr(i32* %7, i32 %8, i32* @app_request_type)
  store %struct.st_mruby_subreq_t* %9, %struct.st_mruby_subreq_t** %5, align 8
  %10 = load %struct.st_mruby_subreq_t*, %struct.st_mruby_subreq_t** %5, align 8
  %11 = icmp eq %struct.st_mruby_subreq_t* %10, null
  br i1 %11, label %12, label %16

12:                                               ; preds = %2
  %13 = load i32*, i32** %3, align 8
  %14 = load i32, i32* @E_ARGUMENT_ERROR, align 4
  %15 = call i32 @mrb_raise(i32* %13, i32 %14, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0))
  br label %16

16:                                               ; preds = %12, %2
  %17 = load %struct.st_mruby_subreq_t*, %struct.st_mruby_subreq_t** %5, align 8
  %18 = call i32 @build_app_response(%struct.st_mruby_subreq_t* %17)
  store i32 %18, i32* %6, align 4
  %19 = load i32, i32* %6, align 4
  %20 = call i32 @mrb_ary_entry(i32 %19, i32 2)
  %21 = load %struct.st_mruby_subreq_t*, %struct.st_mruby_subreq_t** %5, align 8
  %22 = getelementptr inbounds %struct.st_mruby_subreq_t, %struct.st_mruby_subreq_t* %21, i32 0, i32 0
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 0
  store i32 %20, i32* %23, align 4
  %24 = load i32, i32* %6, align 4
  ret i32 %24
}

declare dso_local %struct.st_mruby_subreq_t* @mrb_data_check_get_ptr(i32*, i32, i32*) #1

declare dso_local i32 @mrb_raise(i32*, i32, i8*) #1

declare dso_local i32 @build_app_response(%struct.st_mruby_subreq_t*) #1

declare dso_local i32 @mrb_ary_entry(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
